[gd_scene load_steps=2 format=3 uid="uid://control_rebind_ui"]

[ext_resource type="Script" path="res://metagame/scenes/ControlRebindUI.gd" id="1"]

[node name="ControlRebindUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Control Bindings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeviceLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Current Device: Keyboard & Mouse"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="BindingsList" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResetButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Reset All"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Close"

[node name="RebindDialog" type="AcceptDialog" parent="."]
title = "Press any key or button..."
initial_position = 2
size = Vector2i(300, 100)

[connection signal="pressed" from="Panel/VBoxContainer/ButtonsContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonsContainer/CloseButton" to="." method="_on_close_button_pressed"]
